css/style.css
body {
    padding-top: 318px;
    background: rgb(0, 9, 12) url("bg_light.jpg") top left no-repeat fixed;
    background-position-y: -233px;

}

#scroll {
    background: #fff;
}

.corner {
    background: #fff;
    width: 100%;
    height: 75px;
    -webkit-transform: skewY(-2deg);
    -ms-transform: skewY(-2deg);
    transform: skewY(-2deg);
    -webkit-transform-origin: bottom left;
    -ms-transform-origin: bottom left;
    transform-origin: bottom left;
}

.name {
    text-transform: uppercase;
    font-weight: bold;
}

.font-size-60 {
    font-size: 60px;
}

.font-size-30 {
    font-size: 30px;
}

.contact-link {
    color: #555;
    border-bottom: 1px dashed;
}

.contact-link:hover {
    text-decoration: none !important;
}

.card {
    border: none !important;
}

.card a {
    color: #212529;
    text-decoration: underline;
}

.card-body {
    padding: 1.25rem 0;
}

.delimiter {
    position: relative;
    border-top: 1px solid #d6d6d6;
    text-align: center;
}

.delimiter div {
    position: absolute;
    top: -13px;
    left: 0;
    width: 100%;
    text-align: center;
}

.delimiter span {
    background: #fff;
    padding:  10px 30px;
}

.badge-skill {
    border-radius: 0;
    color: #666;
    background-color: rgba(203,209,211,.3);
    font-weight: 100;
    padding: .5em .4em;
    margin-top: 6px;
    font-size: 100%;
    margin-right: 6px;
}

.selectable-badges .badge-skill {
    cursor: pointer;
}

.badge-skill.active {
    background: #dc3545 !important;
    color: #fff;
}

.card-disabled {
    opacity: 0.05;
    pointer-events: none;
}

.mt-10 {
    margin-top: 6rem!important;
}

.skill-label {
    min-width: 110px;
    display: inline-block;
}

.open-modal {
    color: #dc3545 !important;
}

.card img {
    display: none;
}

.animated {
    background: #fff !important;
}

.animated .modal-content {
    border: none;
}

.close-animatedModal {
    width: 100%;
    cursor: pointer;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 999;
    background: #fff;
    padding: 10px 10px 11px 13px;
    border-radius: 0 0 0 5px;
    box-shadow: 0 2px 5px -4px #333;
}

a, a:hover {
    color: #212529;
}

.work-date {
    font-weight: 100;
    color: #6c757d;
    font-size: 14px;
    vertical-align: middle;
}

.technology {
    text-align: center;
    width: 70px;
    height: 70px;
    border: 1px solid #d6d6d6;
    display: inline-table;
    padding: 5px;
    font-size: 14px;
    border-radius: 3px;
}

.selectable-badges .badge-skill:hover {
    background: rgba(203,209,211,.7);
}

.technology i {
    font-size: 30px;
}

.technology-django {
    padding: 0;
}

.technology-django i {
    font-size: 35px;
}

.footer {
    position: relative;
    background: rgb(237,239,240);
}

.footer .corner {
    background: inherit;
    top: 0px;
}

.mb-10 {
    margin-bottom: 6rem!important;
}

.technology-drf {
    width: 180px;
}

.technology i.fab, .technology i.fas {
    font-size: 32px;
}

#animatedModal h6 {
    margin-top: 20px;
}

#ava {
    margin: -180px auto 0 auto;
    width: 150px;
    height: 150px;
    border: 2px solid #fff;
    border-radius: 50%;
    overflow: hidden;
}

#ava img {
    width: 100%;
    height: auto;
}

.icon {
    padding-right: 5px;
    width: 20px;
    height: auto;
}

.window {
    position: relative;
    background: #2A2F34;
    border-radius: 5px;
    padding: 0 2px 2px 2px;
    margin-bottom: 20px;
    width: 48%;
    margin-right: 10px;
    float: left;
}

.window div {
    text-align: center;
    color: #fff;
    font-size: 12px;
    padding: 8px;
}

.window span {
    position: absolute;
    top: 12px;
    left: 15px;
    width: 10px;
    height: 10px;
    padding: 0;
    border-radius: 100%;
}

.window span:nth-child(2) {
    background-color: #ED7268;
}

.window span:nth-child(3) {
    left: 30px;
    background-color: #F9E600;
}

.window span:nth-child(4) {
    left: 45px;
    background-color: #4BD591;
}

.window img {
    width: 100%;
    border-radius: 0 0 3px 3px;
}

#animatedModal {
    -webkit-transition: opacity 0.5s ease-in-out;
       -moz-transition: opacity 0.5s ease-in-out;
        -ms-transition: opacity 0.5s ease-in-out;
         -o-transition: opacity 0.5s ease-in-out;
            transition: opacity 0.5s ease-in-out;
}

#animatedModal p {
    margin-bottom: 2rem;
}

.pre-line {
    white-space: pre-line
}

.dark-bg {
    background: #2A2F34;
    margin-top: 50px;
}

.col-preview {
    padding: 90px 50px 50px 25px;
}

.col-preview img {
    max-width: 100%;
    margin-bottom: 50px;
}

.col-preview-left {
    text-align: right;
    padding: 90px 25px 50px 50px;
}

.close-animatedModal .float-right {
    padding-right: 6px;
}

.work-title {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    margin: 0 auto;
    width: 50%;
    text-align: center;
    z-index: 1000;
    height: 47px;
    padding-top: 12px;
}

.work-margin-top {
    margin-top: 78px;
}

.width135 {
    width: 135px;
    display: inline-block;
}

.modal-closed {
    opacity: 0;
}

.modal-opened {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    background-color: #fff;
    overflow-y: auto;
    z-index: 9999;
    opacity: 1 !important;
    animation-duration: 0.7s;
}

.modal-content {
    border: none;
}

